loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:7: error: ';' expected but 'while' found.
    }while(!crossing())
     ^Poucet2:9: error: 'while' expected but 'if' found.
  if(biscuit <= 2){
  ^Poucet2:16: error: '(' expected but '}' found.
}
^